[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dex-client"
version = "0.3.0"
description = "Add your description here"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
dependencies = ["betterproto[compiler]>=2.0.0b7"]

[dependency-groups]
dev = ['grpcio-tools']

[project.urls]
Homepage = "https://github.com/Kludex/dex-client"
Funding = "https://github.com/sponsors/Kludex"
